feat: Добавляет кнопку сброса результатов

--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
           <span class="visually-hidden">Количество завершённых помидоров:</span>
           <span class="result__text">0</span>
         </p>
-        <button class="pomodoro__main-button" data-action="start">
+        <button class="button pomodoro__main-button" data-action="start">
           Запустить
+        </button>
+        <button class="button pomodoro__reset-button">
+          Сбросить прогресс
         </button>
       </div>
     </div>
