--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="manifest" href="manifest.json">
   <link rel="icon" href="image/tomato.svg" type="image/svg+xml">
   <link rel="stylesheet" href="style.css">
   <title>POMODORO</title>
