--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="image/tomato.svg" type="image/svg+xml">
   <link rel="stylesheet" href="style.css">
   <title>POMODORO</title>
-  <script src="script.js" defer></script>
+  <script src="scripts/main.js" defer></script>
   <script src="scripts/modal.js" defer></script>
 </head>
 
