--- a/index.html
+++ b/index.html
@@ -38,12 +38,17 @@
           <span class="visually-hidden">Количество завершённых помидоров:</span>
           <span class="result__text">0</span>
         </p>
-        <button class="button pomodoro__main-button" data-action="start">
-          Запустить
-        </button>
-        <button class="button pomodoro__reset-button">
-          Сбросить прогресс
-        </button>
+        <p class="pomodoro__action-buttons">
+          <button class="button action-button pomodoro__main-button" data-action="start">
+            <span class="visually-hidden">Запустить</span>
+          </button>
+          <button class="button action-button pomodoro__reset-button">
+            <span class="visually-hidden">Сбросить прогресс</span>
+          </button>
+          <button class="button action-button pomodoro__settings-button">
+            <span class="visually-hidden">Настройки</span>
+          </button>
+        </p>
       </div>
     </div>
   </main>
