--- a/index.html
+++ b/index.html
@@ -59,17 +59,14 @@
       </button>
       <form class="settings__form" method="dialog">
         <label class="settings__label" for="pomodoro-count">Помидор (минут)</label>
-        <input class="settings__field" type="number" id="pomodoro-count" name="pomodoro-count" placeholder="25"
-          value="25">
+        <input class="settings__field" type="number" id="pomodoro" name="pomodoro-count" placeholder="25" value="25">
         <label class="settings__label" for="short-break-count">Короткий перерыв (минут)</label>
-        <input class="settings__field" type="number" id="short-break-count" name="short-break-count" placeholder="5"
-          value="5">
+        <input class="settings__field" type="number" id="shortBreak" name="short-break-count" placeholder="5" value="5">
         <label class="settings__label" for="long-break-count">Длинный перерыв (минут)</label>
-        <input class="settings__field" type="number" id="long-break-count" name="long-break-count" placeholder="30"
-          value="30">
+        <input class="settings__field" type="number" id="longBreak" name="long-break-count" placeholder="30" value="30">
         <label class="settings__label settings__label--long-break" for="long-break-interval">Количество помидоров до
           длинного перерыва</label>
-        <input class="settings__field" type="number" id="long-break-interval" name="long-break-interval" placeholder="5"
+        <input class="settings__field" type="number" id="longBreakInterval" name="long-break-interval" placeholder="5"
           value="5">
         <button class="button settings__button" type="submit">Сохранить</button>
       </form>
