--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
         <span class="visually-hidden">Закрыть окно настроек.</span>
       </button>
       <form class="settings__form" method="dialog">
-        <label class="settings__label" for="pomodoro">Помидор (минут)</label>
-        <input class="settings__field" type="number" id="pomodoro" name="pomodoro-count" placeholder="25" value="25">
-        <label class="settings__label" for="shortBreak">Короткий перерыв (минут)</label>
-        <input class="settings__field" type="number" id="shortBreak" name="short-break-count" placeholder="5" value="5">
-        <label class="settings__label" for="longBreak">Длинный перерыв (минут)</label>
-        <input class="settings__field" type="number" id="longBreak" name="long-break-count" placeholder="30" value="30">
+        <label class="settings__label" for="pomodoro-count">Помидор (минут)</label>
+        <input class="settings__field" type="number" id="pomodoro-count" name="pomodoro" placeholder="25" value="25">
+        <label class="settings__label" for="short-break-count">Короткий перерыв (минут)</label>
+        <input class="settings__field" type="number" id="short-break-count" name="shortBreak" placeholder="5" value="5">
+        <label class="settings__label" for="long-break-count">Длинный перерыв (минут)</label>
+        <input class="settings__field" type="number" id="long-break-count" name="longBreak" placeholder="30" value="30">
         <label class="settings__label settings__label--long-break" for="longBreakInterval">Количество помидоров до
           длинного перерыва</label>
         <input class="settings__field" type="number" id="longBreakInterval" name="long-break-interval" placeholder="5"
