feat: Добавляет кнопкам действий подсказки

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
           <span class="result__text">0</span>
         </p>
         <p class="pomodoro__action-buttons">
-          <button class="button action-button pomodoro__main-button" data-action="start">
+          <button class="button action-button pomodoro__main-button" data-action="start" title="Запустить">
             <span class="visually-hidden">Запустить</span>
           </button>
-          <button class="button action-button pomodoro__reset-button">
+          <button class="button action-button pomodoro__reset-button" title="Сбросить прогресс">
             <span class="visually-hidden">Сбросить прогресс</span>
           </button>
-          <button class="button action-button pomodoro__settings-button">
+          <button class="button action-button pomodoro__settings-button" title="Настройки">
             <span class="visually-hidden">Настройки</span>
           </button>
         </p>
