feat: Добавляет кнопку перемотки состояния

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
           <button class="button action-button pomodoro__main-button" data-action="start" title="Запустить">
             <span class="visually-hidden">Запустить</span>
           </button>
+          <button class="button action-button pomodoro__rewind-button" title="Перемотать">
+            <span class="visually-hidden">Перемотать</span>
+          </button>
           <button class="button action-button pomodoro__reset-button" title="Сбросить прогресс">
             <span class="visually-hidden">Сбросить прогресс</span>
           </button>
